expand - collapse on sidepanel bug fix

--- a/CalendarClient/src/app/side-panel/side-panel.component.scss
+++ b/CalendarClient/src/app/side-panel/side-panel.component.scss
@@ -21,6 +21,7 @@
     display: flex;
     flex-direction: column;
     transition: all 0.5s ease-out;
+    z-index: 10;
 
     .icon-container {
         display: flex;
@@ -77,5 +78,5 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: -1;
+    z-index: 5;
 }
